--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <!--Graduação-->
 <div class="row mt-4">
     <div class="col-md-4 col-sm-12">
-        <h3 class="strike-title">Graduação</h3>
+        <h5 class="strike-title">Graduação</h5>
     </div>
     <div class="col-md-8 col-sm-12">
-        <div class="strike-maua p-2 m-2"></div>
+        <div class="strike-maua-2 p-2 m-2"></div>
     </div>
 </div>
 <!--Graduação - Cards-->
