--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
       <li class="nav-item"><a id="home-click-item" appLinkDirective class="nav-link" routerLink="/">Home</a></li>
       <li class="nav-item"><a id="prof-click-item" appLinkDirective class="nav-link" routerLink="/professores">Professores</a></li>
       <li class="nav-item"><a id="suje-click-item" appLinkDirective class="nav-link" routerLink="/sujestoes">Sugestões</a></li>
-      <li class="nav-item"><a id="adcc-click-item" appLinkDirective class="nav-link" routerLink="/adicionacurso">Adicionar Curso</a></li>
+      <li class="nav-item"><a id="gercur-click-item" appLinkDirective class="nav-link" routerLink="/adicionacurso">Gerenciar Curso</a></li>
+      <li class="nav-item"><a id="geralu-click-item" appLinkDirective class="nav-link" routerLink="/alunos">Gerenciar Aluno</a></li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
